# Pax-Academia

./: .gitignore  .replit  CONTRIBUTING.md  DeepL.py  Dictionary.py  ENVIRONMENT.md  EmbedBuilder.py  LICENSE  QuillBot.py  README.md  bot.py  environment.md  logging.py  logging_file.py  main.py  pyproject.toml  requirements.in  requirements.txt  run_tests.py  setup.bat  style.py  webcache.py
.github/: CODEOWNERS  lint.yml
.github/workflows/: black.yml  dependencies.yml
code_detection/: __init__.py  base.py  java.py  python.py  python_traceback.py  test_base.py
code_detection/tests/: __init__.py  base.py  helpers.py  python.py  python_traceback.py
cogs/: Alerts.py  AutoDeletionDetection.py  COGS.md  DeepL.py  DetectAI.py  DetectCode.py  Dictionary.py  Information.py  MerriamWebster.py  MessageCounter.py  Messagepolicy.py  Misc.py  Moderation.py  OxfordDictionary.py  Profanity.py  PubChem.py  QuillBot.py  README.md  Rules.py  StaffApps.py  StaffAppsBackoffice.py  StaffAppsUser.py  StaffRequirements.py  Staffrequirements.py  Surveys.py  Tips.py  Wikipedia.py  alerts.py  deepl.py  detect_ai.py  detect_code.py  detect_media_spam.py  dictionary.py  message_counter.py  misc.py  moderation.py  pubchem.py  rules.py  staffapps_backend.py  staffapps_frontend.py  (+3 more)
database/: README.md  __init__.py  migrate.py  schema.py
message_formatting/: dev.py  embeds.py
util/: ERD.mdj  EmbedBuilder.py  Logging.py  README.md  bandwidth.py  db_builder.py  db_migrator.py  db_update.py  deepl_update.py  dev.py  embed_builder.py  limiter.py  logger.py  threaded_async.py
(+6 files in other folders)
